@startuml tb-decorator
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 0
skinparam defaultFontName "Lucida Grande"
skinparam dpi 150
skinparam class {
  BackgroundColor #FFFFCE
  BorderColor #000000
  BorderThickness 1
  ArrowColor #000000
  FontColor #000000
  AttributeFontColor #000000
  StereotypeFontColor #000000
  HeaderBackgroundColor #FFFFCE
}
skinparam legendBackgroundColor #FFFFFF

title 그림 10-7 대응 — Decorator (좌석 뷰) (iteration 4)
abstract class SeatView <<Component>> #line:red;line.bold {
  +{abstract} getDescription(): String
  +{abstract} getSurcharge(): BigDecimal
}
class BaseSeatView <<ConcreteComponent>> #line:red;line.bold {
  +getDescription(): String
  +getSurcharge(): BigDecimal
}
abstract class AbstractSeatDecorator <<Decorator>> #line:red;line.bold {
  -component: SeatView
  --
  +getDescription(): String
  +getSurcharge(): BigDecimal
}
class WindowSeatDecorator <<ConcreteDecorator>> #line:red;line.bold {
  +getDescription(): String
  -addedBehavior(): String
}
class ExtraLegroomDecorator <<ConcreteDecorator>> #line:red;line.bold {
  +getDescription(): String
  +getSurcharge(): BigDecimal
  -addedBehavior(): String
}
SeatView <|-- BaseSeatView
SeatView <|-- AbstractSeatDecorator
AbstractSeatDecorator o--> SeatView : -component
AbstractSeatDecorator <|-- WindowSeatDecorator
AbstractSeatDecorator <|-- ExtraLegroomDecorator
note bottom of WindowSeatDecorator
  operation 은 super.operation() 호출 후 private addedBehavior() 추가
  (그림: super.operation(); addedBehavior();)
end note
legend bottom
  <#FFFFCE>|= 표기 |= 의미 |
  |<#FFFFCE> 노란 박스 | iteration 1-3 기존 |
  | <color:red>빨강 테두리/글자</color> | iteration 4 신규/수정 |
endlegend
@enduml